--- a/static/styles/circle-charts.scss
+++ b/static/styles/circle-charts.scss
@@ -1,6 +1,9 @@
 .circle-chart {
-  &__element {
-    fill: steelblue;
+  circle {
+    opacity: 0.9;
   }
 }
 
+.circle-chart__element {
+  fill: steelblue;
+}
