--- a/static/styles/pie-charts.scss
+++ b/static/styles/pie-charts.scss
@@ -1,7 +1,8 @@
-.pie-chart {
-  &--interactive {
-    text {
-      fill: #FFF;
-    }
-  } 
+.pie-chart { 
+}
+
+.pie-chart--interactive {
+  text {
+    fill: #FFF;
+  }
 }
