--- a/static/styles/tree-charts.scss
+++ b/static/styles/tree-charts.scss
@@ -1,21 +1,21 @@
 .tree-charts-container {
   .node {
-    &--internal {
-      circle {
-        fill: #555;
-      }
-
-      text {
-        text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
-      }
-    }
-
     circle {
       fill: #999;
     }
 
     text {
       font: 10px sans-serif;
+    }
+  }
+
+  .node--internal {
+    circle {
+      fill: #555;
+    }
+
+    text {
+      text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
     }
   }
 
