--- a/static/styles/index.scss
+++ b/static/styles/index.scss
@@ -1,7 +1,8 @@
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
-@import './bar-charts.scss';
-@import './circle-charts.scss';
-@import './line-charts.scss';
-@import './pie-charts.scss';
-@import './force-charts.scss';
-@import './tree-charts.scss';
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./bar-charts.scss";
+@import "./circle-charts.scss";
+@import "./line-charts.scss";
+@import "./pie-charts.scss";
+@import "./force-charts.scss";
+@import "./tree-charts.scss";
+@import "./axis.scss";
