--- a/static/styles/bar-charts.scss
+++ b/static/styles/bar-charts.scss
@@ -17,8 +17,10 @@
 .bar-chart__div {
   background-color: green;
   border: 1px solid white;
-  width: 0px;
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 10px;
 }
 
 .bar-chart--stack {
