--- a/static/styles/index.scss
+++ b/static/styles/index.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./charts.scss";
 @import "./bar-charts.scss";
 @import "./circle-charts.scss";
 @import "./line-charts.scss";
