--- a/static/styles/bar-charts.scss
+++ b/static/styles/bar-charts.scss
@@ -11,7 +11,7 @@
 }
 
 .bar-chart__div {
-  background-color: green;
+  background-color: steelblue;
   border: 1px solid white;
   display: flex;
   justify-content: flex-end;
