--- a/static/styles/index.scss
+++ b/static/styles/index.scss
@@ -1,7 +1,9 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
-@import "./charts.scss";
 @import "./bar-charts.scss";
 @import "./line-charts.scss";
-@import "./pie-charts.scss";
 @import "./tree-charts.scss";
 @import "./axis.scss";
+
+.chart {
+  height: calc(100vh - 100px);
+}
